# Colombo

./: .claudeignore  .env.example  .gitignore  .mcp.json  CLAUDE.md  Document sans titre.md  biome.json  package.json  pnpm-lock.yaml  tsconfig.base.json  vercel.json
.claude/skills/francolomb-scraper/: SKILL.md
.claude/skills/pigeon-matricule/: SKILL.md
.github/workflows/: ci.yml  scraper.yml
apps/scraper/: pyproject.toml  railway.toml
apps/scraper/src/: __main__.py
apps/scraper/src/colombo_scraper.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
apps/scraper/src/crawler/: __init__.py  francolomb.py
apps/scraper/src/db/: client.py  persist.py
apps/scraper/src/parser/: __init__.py  models.py  pdf_parser.py
apps/scraper/tests/: conftest.py  test_parser.py
apps/web/: next.config.ts  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json
apps/web/e2e/: middleware.spec.ts  onboarding.spec.ts  performance.spec.ts  tsconfig.json
apps/web/e2e/helpers/: admin.ts  perf.ts
apps/web/scripts/: lighthouse-run.mjs
apps/web/src/: middleware.ts
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: app-topbar.tsx  empty-state.tsx  kpi-card.tsx  performance-charts.tsx  (+5 more)
docs/agents/: domain.md
docs/architecture/: data-model.md  git-workflow.md  onboarding-plan.md
docs/domain/: glossaire.md
docs/sessions/: 2026-04-22-kickoff.md  2026-04-24-onboarding-scraper-validation.md  2026-04-24-setup-db-web-auth.md  2026-05-03-refonte-ia-mobile-filters.md  2026-05-04-perf-instrumentation-vercel-deploy.md
(+67 files in other folders)
