[project]
name = "colombo-scraper"
version = "0.1.0"
description = "Scraper de resultats de concours colombophiles Francolomb"
requires-python = ">=3.12"
dependencies = [
    "pdfplumber>=0.11",
    "pydantic>=2.9",
    "httpx>=0.27",
    "tenacity>=9.0",
    "supabase>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "colombo-scraper",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["needs_fixtures: skipped si fixtures/ ne contient pas de PDFs reels"]
